prodMetadata/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>percET__Total_Unique_Responses_in_Hierarchy__c</fullName>
        <inlineHelpText>Answers the quesiton: how many unique contacts responded to this campaign or one of its sub-campaigns?  Note that the Salesforce &quot;Total Responses in Hierarchy&quot; field may count more than one response by a single contact.  Provided by StepUp.</inlineHelpText>
        <label>Total Unique Responses in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Allocated_Fund__c</fullName>
        <label>Allocated Funds</label>
        <summarizedField>stayclassy__Classy_Allocations__c.stayclassy__Amount__c</summarizedField>
        <summaryForeignKey>stayclassy__Classy_Allocations__c.stayclassy__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>stayclassy__Average_Gift__c</fullName>
        <formula>IF (
HierarchyNumberOfWonOpportunities &gt; 0,
HierarchyAmountWonOpportunities / HierarchyNumberOfWonOpportunities,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>stayclassy__Campaign_Path__c</fullName>
        <label>Campaign Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_API_Request_Status__c</fullName>
        <formula>TEXT(stayclassy__Classy_API_Request__r.stayclassy__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classy API Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_API_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent API request that updates this Campaign</description>
        <label>Classy API Request</label>
        <referenceTo>stayclassy__Classy_API_Request__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Campaign_Type__c</fullName>
        <description>Indicates the level of the Campaign hierarchy for a record, either Campaign (a parent Classy Campaign), Team, or Fundraiser</description>
        <label>Classy Campaign Hierarchy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Fundraiser</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Designation_Id__c</fullName>
        <description>The external Classy Designation ID</description>
        <label>Classy Designation ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_External_ID__c</fullName>
        <description>Represents the ID of a Campaign, Fundraising Page, or Team.  The ID is a combination of the type of campaign and the Classy ID.</description>
        <externalId>true</externalId>
        <label>Classy External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Fundraising_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Campaign record of the Classy fundraising team.</description>
        <label>Classy Fundraising Team</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Classy Fundraising Team)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Member_ID__c</fullName>
        <label>Classy Member ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Mode_Checked_By_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, and if the &quot;classy_mode_enabled&quot; option is true, this will check the &quot;Classy Mode&quot; selection by default on donation forms on Classy</description>
        <inlineHelpText>If true, and if the &quot;classy_mode_enabled&quot; option is true, this will check the &quot;Classy Mode&quot; selection by default on donation forms on Classy</inlineHelpText>
        <label>Classy Mode Checked By Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Mode_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, give the donor the option to cover the transaction fee on Classy Donation form</description>
        <inlineHelpText>If true, give the donor the option to cover the transaction fee on Classy Donation form</inlineHelpText>
        <label>Classy Mode Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Organization_ID__c</fullName>
        <description>The external Classy Organization ID</description>
        <label>Classy Organization ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Parent_Campaign_ID__c</fullName>
        <label>Classy Parent Campaign ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Parent_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Campaign record of the parent Classy campaign</description>
        <label>Classy Parent Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Team_ID__c</fullName>
        <label>Classy Team ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Commitment__c</fullName>
        <description>Represents the Commitment level of a fundraiser or supporter</description>
        <label>Fundraising Commitment</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>stayclassy__Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Deferred_Transaction_Amount__c</fullName>
        <description>The total amount of deferred transactions related to this Campaign</description>
        <label>Deferred Transaction Amount</label>
        <summarizedField>stayclassy__Deferred_Transaction__c.stayclassy__Amount__c</summarizedField>
        <summaryForeignKey>stayclassy__Deferred_Transaction__c.stayclassy__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>stayclassy__Effective_Fixed_FOT_Percent__c</fullName>
        <description>Percentage to be added to fee_on_top transactions for the campaign to cover fees. If fixed_fot_percent is null falls back on the organization&apos;s fixed_fot_percent.</description>
        <inlineHelpText>Percentage to be added to fee_on_top transactions for the campaign to cover fees. If fixed_fot_percent is null falls back on the organization&apos;s fixed_fot_percent.</inlineHelpText>
        <label>Effective Fixed FOT Percent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__End_Date__c</fullName>
        <label>Classy End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>stayclassy__Event_Image_URL__c</fullName>
        <description>For top-level events, this is the URL to the main event image</description>
        <label>Event Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>stayclassy__Fixed_FOT_Percent__c</fullName>
        <description>Percentage campaign elects to be added to fee_on_top transactions to cover fees.</description>
        <inlineHelpText>Percentage campaign elects to be added to fee_on_top transactions to cover fees.</inlineHelpText>
        <label>Fixed FOT Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Fundraiser_Alias__c</fullName>
        <description>Used to distinguish multiple fundraising pages created by a single Contact.  Since a single user can sign up multiple people to create fundraising pages, the alias can be used to represent one of the additional supporters.  For example, a parent might sign up their children for fundraising pages.  The parent remains the Contact attached to the fundraising page, and the alias would be the children&apos;s names.</description>
        <label>Fundraiser Alias</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Fundraising_Page_Title__c</fullName>
        <label>Fundraising Page Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Fundraising_Team_Name__c</fullName>
        <label>Fundraising Team Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Raw_Currency_Code__c</fullName>
        <label>Raw Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Raw_Goal_Amount__c</fullName>
        <label>Raw Goal Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Start_Date__c</fullName>
        <label>Classy Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>stayclassy__Team_Role__c</fullName>
        <description>For fundraising pages that belong to a team, this field denotes whether the individual fundraiser is either a captain or a co-captain of the team.</description>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>primary-captain</fullName>
                </value>
                <value>
                    <fullName>co-captain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>stayclassy__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Classy Team</label>
        <referenceTo>stayclassy__Classy_Team__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__Timezone_Identifier__c</fullName>
        <label>Timezone Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__address1__c</fullName>
        <label>Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__address2__c</fullName>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__campaign_url__c</fullName>
        <formula>IF( stayclassy__Campaign_Path__c  = null,
IF(stayclassy__sc_event_id__c &gt; 0 &amp;&amp; ISPICKVAL(stayclassy__Classy_Campaign_Type__c, &quot;Fundraiser&quot;), &quot;https://&quot; &amp;  BLANKVALUE($Setup.stayclassy__Classy_Profile_Settings__c.stayclassy__Classy_Domain__c, &quot;classy.org&quot;) &amp; &quot;/fundraise?fcid=&quot; &amp; text(stayclassy__sc_event_id__c), 
IF(stayclassy__sc_event_id__c &gt; 0 &amp;&amp; ISPICKVAL(stayclassy__Classy_Campaign_Type__c, &quot;Team&quot;), &quot;https://&quot; &amp;  BLANKVALUE($Setup.stayclassy__Classy_Profile_Settings__c.stayclassy__Classy_Domain__c, &quot;classy.org&quot;) &amp; &quot;/fundraise/team?ftid=&quot; &amp; text(stayclassy__sc_event_id__c), 
IF(stayclassy__sc_event_id__c &gt; 0 &amp;&amp; ISPICKVAL(stayclassy__Classy_Campaign_Type__c, &quot;Campaign&quot;), &quot;https://&quot; &amp;  BLANKVALUE($Setup.stayclassy__Classy_Profile_Settings__c.stayclassy__Classy_Domain__c, &quot;classy.org&quot;) &amp; &quot;/events/detail?eid=&quot; &amp; text(stayclassy__sc_event_id__c), 
&quot;&quot;
))), &quot;https://&quot; &amp; BLANKVALUE($Setup.stayclassy__Classy_Profile_Settings__c.stayclassy__Classy_Domain__c, &quot;classy.org&quot;) &amp; stayclassy__Campaign_Path__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__city__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__percent_goal_reached__c</fullName>
        <formula>IF(ExpectedRevenue &gt; 0, HierarchyAmountWonOpportunities / ExpectedRevenue, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Goal Reached</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>stayclassy__sc_event_id__c</fullName>
        <externalId>true</externalId>
        <label>Classy Campaign ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__sf_contact_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact for this individual fundraiser or team captain for a team fundraiser</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__sf_designation_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Classy Designation for this Campaign, Fundraiser, or Team</description>
        <label>Classy Designations</label>
        <referenceTo>stayclassy__sc_designation__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__state__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__venue_name__c</fullName>
        <label>Name of the Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__zip__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notContain</operation>
            <value>[Event auto-add]</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>handy</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Planned,In Progress</value>
        </filters>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>C2CS_Concert_Series</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>linkin park at,miller coors at,mayhem at,gaga at</value>
        </filters>
        <label>C2CS Concert Series</label>
    </listViews>
    <listViews>
        <fullName>COMMO_Campaigns</fullName>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>COMMO</value>
        </filters>
        <label>COMMO Campaigns</label>
    </listViews>
    <listViews>
        <fullName>COMMO_Civilian_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>COMMO</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Civilian</value>
        </filters>
        <label>COMMO Civilian Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Templates</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Template__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Campaign Templates</label>
    </listViews>
    <listViews>
        <fullName>Campaigns_created_this_week</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Campaigns created this week</label>
    </listViews>
    <listViews>
        <fullName>Campaigns_with_Associated_Donations</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>TOT_AMOUNT_WON</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TOT_AMOUNT_WON</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </filters>
        <label>Campaigns with Associated Donations</label>
    </listViews>
    <listViews>
        <fullName>Campaigns_with_E_Level</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>percET__Campaign_Engagement_Level__c</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>percET__Campaign_Engagement_Level__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Campaigns with Engagment Level</label>
        <sharedTo>
            <group>Sysadmins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Donate_Pages</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>AMOUNT_ALL</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Donate Page,Storefront Page</value>
        </filters>
        <label>Donate and Storefront Pages</label>
    </listViews>
    <listViews>
        <fullName>Fundraising_Campaigns_and_Events</fullName>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>TOT_AMOUNT_WON</columns>
        <columns>Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>Sub_Type__c</field>
            <operation>equals</operation>
            <value>Donor VIP Event,Fundraising Event</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Fundraising Campaign</value>
        </filters>
        <label>Fundraising Campaigns and Events</label>
    </listViews>
    <listViews>
        <fullName>Gala_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Gala</value>
        </filters>
        <label>Gala Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Membership_Events</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Sub_Type__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Chapter__c</columns>
        <columns>Attendees__c</columns>
        <columns>Members_Recruited_from_Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>Sub_Type__c</field>
            <operation>equals</operation>
            <value>Membership Drive,Membership Meeting,Art Event,Sporting Event</value>
        </filters>
        <filters>
            <field>Sub_Type__c</field>
            <operation>equals</operation>
            <value>Advocacy/Lobbying Event,Ceremonial Event,Other Event,Members repping IAVA event</value>
        </filters>
        <label>Membership Events</label>
    </listViews>
    <listViews>
        <fullName>Modified_in_last_month</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Modified in last month</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>use this campaign record type for any non-Classy campaigns</description>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>stayclassy__Classy</fullName>
        <active>true</active>
        <description>Default Record Type for Campaigns created via Classy</description>
        <label>Classy</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>FriendIndividualTicketLimit</fullName>
        <active>false</active>
        <description>no more than 35 $1250 tickets (friend individual) can be purchased for the 2017 gala</description>
        <errorConditionFormula>Friend_Individual_Tickets__c &gt; 35</errorConditionFormula>
        <errorMessage>We have limited the sale of Friend Individual ($1250) to 35 tickets. Please contact heroesgala@iava.org with any questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SupporterIndividualTicketLimit</fullName>
        <active>false</active>
        <description>no more than 70 $2500 tickets (supporter individual) can be purchased for the 2017 gala</description>
        <errorConditionFormula>Supporter_Individual_Tickets__c &gt; 70</errorConditionFormula>
        <errorMessage>We have limited the sale of Supporter Individual ($2500) to 70 tickets. Please contact heroesgala@iava.org with any questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>stayclassy__Goal_Must_Exceed_Commitment</fullName>
        <active>true</active>
        <description>The goal for a fundraising page or team must be greater than or equal to the commitment</description>
        <errorConditionFormula>stayclassy__Commitment__c &gt; 0 &amp;&amp; ExpectedRevenue &lt; stayclassy__Commitment__c</errorConditionFormula>
        <errorMessage>Expected Revenue (Fundraising Goal) can not be less than Commitment</errorMessage>
    </validationRules>
</CustomObject>